Service introduction implemented parsers as services implemented message service improved raw metadata parsing renamed MainWindow -> MainView

--- a/SD EXIF Editor v2/SD EXIF Editor v2.csproj
+++ b/SD EXIF Editor v2/SD EXIF Editor v2.csproj
@@ -11,6 +11,8 @@
 
   <ItemGroup>
     <PackageReference Include="ExifLibNet" Version="2.1.4" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
