lots of work on ui civit.ai-like ui dark theme and others necessary changes and classes along the way

--- a/SD EXIF Editor v2/SD EXIF Editor v2.csproj
+++ b/SD EXIF Editor v2/SD EXIF Editor v2.csproj
@@ -10,7 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Biaui" Version="1.0.24" />
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
     <PackageReference Include="ExifLibNet" Version="2.1.4" />
+    <PackageReference Include="MahApps.Metro.IconPacks.BootstrapIcons" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
   </ItemGroup>
