Introducing settings also mvvm splitting

--- a/SD EXIF Editor v2/App.config
+++ b/SD EXIF Editor v2/App.config
@@ -7,8 +7,8 @@
     </configSections>
     <userSettings>
         <SD_EXIF_Editor_v2.Properties.Settings>
-            <setting name="CivitToken" serializeAs="String">
-                <value />
+            <setting name="NSFWLevel" serializeAs="String">
+                <value>0</value>
             </setting>
         </SD_EXIF_Editor_v2.Properties.Settings>
     </userSettings>
