added checkbox for showing placeholders when prompts are empty cleaned converters

--- a/SD EXIF Editor v2/App.config
+++ b/SD EXIF Editor v2/App.config
@@ -10,6 +10,9 @@
             <setting name="NSFWLevel" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="DisplayPlaceholders" serializeAs="String">
+                <value>False</value>
+            </setting>
         </SD_EXIF_Editor_v2.Properties.Settings>
     </userSettings>
 </configuration>
