added setting for log level selection

--- a/SD EXIF Editor v2/App.config
+++ b/SD EXIF Editor v2/App.config
@@ -13,6 +13,9 @@
             <setting name="DisplayPlaceholders" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="LogLevel" serializeAs="String">
+                <value>2</value>
+            </setting>
         </SD_EXIF_Editor_v2.Properties.Settings>
     </userSettings>
 </configuration>
