--- a/SD EXIF Editor v2/SD EXIF Editor v2.csproj
+++ b/SD EXIF Editor v2/SD EXIF Editor v2.csproj
@@ -16,9 +16,11 @@
 		<PackageReference Include="MahApps.Metro.IconPacks.BootstrapIcons" Version="5.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.122" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="NLog" Version="5.3.2" />
+		<PackageReference Include="NLog.Extensions.Logging" Version="5.3.11" />
 	</ItemGroup>
 
 	<ItemGroup>
