fixed nlog config at startup

--- a/SD EXIF Editor v2/nlog.config
+++ b/SD EXIF Editor v2/nlog.config
@@ -10,6 +10,6 @@
 	</targets>
 
 	<rules>
-		<logger name="*" minlevel="Trace" writeTo="f,c" />
+		<logger name="*" minlevel="Info" writeTo="f,c" />
 	</rules>
 </nlog>
