--- a/SD_EXIF_Editor_v2/SD_EXIF_Editor_v2.csproj
+++ b/SD_EXIF_Editor_v2/SD_EXIF_Editor_v2.csproj
@@ -50,6 +50,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="NLog-windows.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
