--- a/SD_EXIF_Editor_v2/Properties/Settings.settings
+++ b/SD_EXIF_Editor_v2/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="LogLevel" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">3</Value>
     </Setting>
+    <Setting Name="IsDarkTheme" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
