--- a/SD_EXIF_Editor_v2/SD_EXIF_Editor_v2.csproj
+++ b/SD_EXIF_Editor_v2/SD_EXIF_Editor_v2.csproj
@@ -33,6 +33,7 @@
     <PackageReference Include="NLog.Extensions.Logging" Version="5.3.12" />
     <PackageReference Include="Semi.Avalonia" Version="11.1.0.2" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.8.1" />
   </ItemGroup>
 
   <ItemGroup>
