Implemented MaximumLines setting

--- a/SD_EXIF_Editor_v2/App.config
+++ b/SD_EXIF_Editor_v2/App.config
@@ -19,6 +19,9 @@
             <setting name="IsDarkTheme" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="MaximumLines" serializeAs="String">
+                <value>3</value>
+            </setting>
         </SD_EXIF_Editor_v2.Properties.Settings>
     </userSettings>
 </configuration>
