Added saving/restoring window size/position logics and settings items Changed DI to use VM interfaces Fixed MainViewModel ViewModel resolving for DI interface use support

--- a/SD_EXIF_Editor_v2/App.config
+++ b/SD_EXIF_Editor_v2/App.config
@@ -22,6 +22,24 @@
             <setting name="MaximumLines" serializeAs="String">
                 <value>3</value>
             </setting>
+            <setting name="ShouldKeepSize" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ShouldKeepPos" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="WindowWidth" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="WindowHeight" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="WindowLeft" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="WindowTop" serializeAs="String">
+                <value>0</value>
+            </setting>
         </SD_EXIF_Editor_v2.Properties.Settings>
     </userSettings>
 </configuration>
